--- a/style.css
+++ b/style.css
@@ -1,19 +1,33 @@
+/**
+* Variables
+*/
 body {
   background-color: #c5e4e7;
   font-family: "Space Mono", monospace;
 }
 
-/**
-* Title
-*/
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-.custom {
-  height: 5vh;
-  width: 40vw;
+.select_tip input {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: white;
+  background-color: #00494d;
+  font-size: 24px;
+  height: 7vh;
+  width: 8vw;
+  font-weight: 700;
+  border: none;
+}
+.select_tip #custom {
+  color: #5e7a7d;
+  background-color: white;
+  font-weight: 700;
+  text-align: end;
 }
 
 /*# sourceMappingURL=style.css.map */
