--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,7 @@ body {
         background-color: $veryLightCyan;
         border-style: none;
         @include border-radius(5px);
-        outline-color: $strongCyan;
+        outline-color: $lightCyan;
         text-align: end;
         padding-right: 0.5vw;
         color: $lightDarkCyan;
@@ -108,6 +108,12 @@ body {
         font-weight: 500;
         border: none;
         caret-color: $strongCyan;
+      }
+
+      input:hover {
+        font-weight: 700;
+        color: $strongDarkCyan;
+        background-color: $lightCyan;
       }
 
       .second_raw {
@@ -155,6 +161,7 @@ body {
         text-align: end;
         padding-right: 0.5vw;
         color: $lightDarkCyan;
+        outline-color: $lightCyan;
       }
 
       .clicked {
@@ -220,6 +227,30 @@ body {
       opacity: 25%;
       margin: 6vh 2vw;
       border: none;
+    }
+
+    #reset:hover {
+      background-color: $lightCyan;
+      opacity: 100%;
+    }
+
+    #completed {
+      @include border-radius(5px);
+      width: 18vw;
+      height: 5vh;
+      font-family: $font;
+      font-weight: 700;
+      font-size: 15px;
+      background-color: $strongCyan;
+      color: $strongDarkCyan;
+      margin: 6vh 2vw;
+      border: none;
+      opacity: none;
+    }
+
+    #completed:hover {
+      background-color: $lightCyan;
+      opacity: 100%;
     }
   }
 }
