--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,7 @@ body {
   letter-spacing: 0.5vw;
   overflow-wrap: break-word;
   position: fixed;
-  left: 50%;
+  left: 49%;
   top: 20%;
 }
 
@@ -108,16 +108,13 @@ body {
         font-weight: 500;
         border: none;
         caret-color: $strongCyan;
+        margin-bottom: 1.2vh;
       }
 
       input:hover {
         font-weight: 700;
         color: $strongDarkCyan;
         background-color: $lightCyan;
-      }
-
-      .second_raw {
-        margin-top: 1.5vh;
       }
 
       #custom {
@@ -215,6 +212,11 @@ body {
         color: $strongCyan;
       }
     }
+
+    /**
+    * Button reset
+    */
+
     #reset {
       @include border-radius(5px);
       width: 18vw;
@@ -251,6 +253,122 @@ body {
     #completed:hover {
       background-color: $lightCyan;
       opacity: 100%;
+    }
+  }
+}
+
+/**
+* Media Queries
+*/
+
+@media screen and (max-width: 376px), (height: 800px) {
+  /**
+  * Title
+  */
+
+  #title_container {
+    width: 19vw;
+    left: 42%;
+    top: 2%;
+    font-size: larger;
+    letter-spacing: 1.5vw;
+  }
+
+  /**
+  * Main Card
+  */
+
+  #splitter_container {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 16%;
+
+    /**
+    * Left side
+    */
+
+    .left_card {
+      /**
+      * First part
+      */
+      .bill {
+        margin-bottom: 0.5vh;
+        #dollar {
+          position: fixed;
+          top: 24.3%;
+          left: 12%;
+        }
+      }
+
+      /*
+      ** Second part
+      */
+
+      .select_tip {
+        .select {
+          width: 85vw;
+        }
+
+        input {
+          height: 5vh;
+          width: 37.5vw;
+          margin-right: 5px;
+          margin-bottom: 11px;
+        }
+
+        .custom_clicked {
+          width: 36.5vw;
+        }
+      }
+
+      /**
+      * Third part
+      */
+
+      .nb_people {
+        #person {
+          top: 62%;
+          left: 12%;
+        }
+      }
+    }
+
+    /**
+    * Right side
+    */
+
+    .right_card {
+      position: fixed;
+      top: 66%;
+      width: 90%;
+      height: 30%;
+
+      .tip {
+        margin: 2vh 6vw;
+
+        #tip_amount {
+          margin-left: 25vw;
+        }
+
+        #total_person {
+          margin-left: 30vw;
+        }
+      }
+
+      #reset {
+        height: 6vh;
+        width: 79vw;
+        margin: 1vh 5vw;
+      }
+
+      #completed {
+        height: 6vh;
+        width: 79vw;
+        margin: 1vh 5vw;
+      }
     }
   }
 }
