--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,5 +1,5 @@
-@import "/assets/import/mixin.scss";
-@import "/assets/import/variables.scss";
+@import "mixin.scss";
+@import "variables.scss";
 
 body {
   background-color: $lightCyan;
@@ -75,7 +75,7 @@ body {
         padding-right: 0.5vw;
         color: $lightDarkCyan;
         cursor: pointer;
-        background-image: url("/assets/images/icon-dollar.svg");
+        background-image: url("../../assets/images/icon-dollar.svg");
         background-repeat: no-repeat;
         background-position: top 50% left 4%;
       }
@@ -158,7 +158,7 @@ body {
         color: $lightDarkCyan;
         outline-color: $lightCyan;
         cursor: pointer;
-        background-image: url("/assets/images/icon-person.svg");
+        background-image: url("../../assets/images/icon-person.svg");
         background-repeat: no-repeat;
         background-position: top 50% left 4%;
       }
