--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,17 +9,17 @@ body {
   font-family: "Space Mono", monospace;
 }
 
-/**
-* Title
-*/
-#title_container {
-  width: 5vw;
-  font-weight: 700;
-  letter-spacing: 0.5vw;
-  overflow-wrap: break-word;
-  position: fixed;
-  left: 49%;
-  top: 20%;
+* {
+  box-sizing: border-box;
+}
+
+#main {
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /**
@@ -33,9 +33,6 @@ body {
   background-color: white;
   width: 49vw;
   height: 50vh;
-  position: fixed;
-  left: 25%;
-  top: 35%;
   font-size: 0.9rem;
   font-weight: 700;
   color: #7f9c9f;
@@ -48,7 +45,6 @@ body {
 }
 #splitter_container .left_card {
   width: 50%;
-  height: 90%;
   margin: 1rem;
   padding-top: 0.9rem;
   padding-left: 0.9rem;
@@ -176,7 +172,6 @@ body {
 }
 #splitter_container .right_card {
   width: 50%;
-  height: 90%;
   margin: 1rem;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
@@ -256,26 +251,15 @@ body {
 /**
 * Media Queries
 */
-@media screen and (max-width: 1200px) {
-  /**
-  * Title
-  */
-  #title_container {
-    width: 19vw;
-    left: 42%;
-    top: 2%;
-    font-size: larger;
-    letter-spacing: 1.5vw;
-    color: #5e7a7d;
-  }
-
+@media screen and (max-width: 1350px) {
   /**
   * Main Card
   */
   #splitter_container {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    max-width: 23.5625rem;
+    min-width: 24rem;
     height: 100vh;
     left: 0;
     top: 16%;
@@ -287,6 +271,7 @@ body {
     */
   }
   #splitter_container .left_card {
+    width: 100%;
     /**
     * First part
     */
@@ -305,12 +290,19 @@ body {
     top: 24.3%;
     left: 12%;
   }
+  #splitter_container .left_card .select_tip {
+    max-width: 23.5625rem;
+    min-width: 24rem;
+  }
   #splitter_container .left_card .select_tip .select {
-    width: 85vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.9375rem;
   }
   #splitter_container .left_card .select_tip input {
     height: 5vh;
-    width: 37.5vw;
+    width: 22.5vw;
     margin-right: 5px;
     margin-bottom: 11px;
   }
@@ -322,10 +314,7 @@ body {
     left: 12%;
   }
   #splitter_container .right_card {
-    position: fixed;
-    top: 66%;
     width: 90%;
-    height: 30%;
   }
   #splitter_container .right_card .tip, #splitter_container .right_card .total {
     margin: 2vh 6vw;
