--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -6,18 +6,17 @@ body {
   font-family: $font;
 }
 
-/**
-* Title
-*/
+* {
+  box-sizing: border-box;
+}
 
-#title_container {
-  width: 5vw;
-  font-weight: 700;
-  letter-spacing: 0.5vw;
-  overflow-wrap: break-word;
-  position: fixed;
-  left: 49%;
-  top: 20%;
+#main {
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /**
@@ -30,9 +29,6 @@ body {
   background-color: $white;
   width: 49vw;
   height: 50vh;
-  position: fixed;
-  left: 25%;
-  top: 35%;
   font-size: 0.9rem;
   font-weight: 700;
   color: $lightDarkCyan;
@@ -43,7 +39,6 @@ body {
 
   .left_card {
     width: 50%;
-    height: 90%;
     margin: 1rem;
     padding-top: 0.9rem;
     padding-left: 0.9rem;
@@ -190,7 +185,6 @@ body {
 
   .right_card {
     width: 50%;
-    height: 90%;
     margin: 1rem;
     @include border-radius(15px);
     background-color: $strongDarkCyan;
@@ -278,20 +272,7 @@ body {
 * Media Queries
 */
 
-@media screen and (max-width: 1200px) {
-  /**
-  * Title
-  */
-
-  #title_container {
-    width: 19vw;
-    left: 42%;
-    top: 2%;
-    font-size: larger;
-    letter-spacing: 1.5vw;
-    color: $darkCyan;
-  }
-
+@media screen and (max-width: 1350px) {
   /**
   * Main Card
   */
@@ -299,7 +280,8 @@ body {
   #splitter_container {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    max-width: 23.5625rem;
+    min-width: 24rem;
     height: 100vh;
     left: 0;
     top: 16%;
@@ -309,6 +291,7 @@ body {
     */
 
     .left_card {
+      width: 100%;
       /**
       * First part
       */
@@ -326,13 +309,18 @@ body {
       */
 
       .select_tip {
+        max-width: 23.5625rem;
+        min-width: 24rem;
         .select {
-          width: 85vw;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 0.9375rem;
         }
 
         input {
           height: 5vh;
-          width: 37.5vw;
+          width: 22.5vw;
           margin-right: 5px;
           margin-bottom: 11px;
         }
@@ -359,10 +347,7 @@ body {
     */
 
     .right_card {
-      position: fixed;
-      top: 66%;
       width: 90%;
-      height: 30%;
 
       .tip {
         margin: 2vh 6vw;
