--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,6 +29,7 @@ body {
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
+  padding: 1rem;
   display: flex;
   background-color: white;
   width: 49vw;
@@ -45,9 +46,6 @@ body {
 }
 #splitter_container .left_card {
   width: 50%;
-  margin: 1rem;
-  padding-top: 0.9rem;
-  padding-left: 0.9rem;
   /**
   * First part
   */
@@ -172,7 +170,6 @@ body {
 }
 #splitter_container .right_card {
   width: 50%;
-  margin: 1rem;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
@@ -258,11 +255,12 @@ body {
   #splitter_container {
     display: flex;
     flex-direction: column;
-    max-width: 23.5625rem;
+    max-width: 24rem;
     min-width: 24rem;
     height: 100vh;
     left: 0;
     top: 16%;
+    height: 50rem;
     /**
     * Left side
     */
@@ -284,56 +282,58 @@ body {
   }
   #splitter_container .left_card .bill {
     margin-bottom: 0.5vh;
+    display: flex;
+    flex-direction: column;
   }
   #splitter_container .left_card .bill #dollar {
     position: fixed;
     top: 24.3%;
     left: 12%;
   }
-  #splitter_container .left_card .select_tip {
-    max-width: 23.5625rem;
-    min-width: 24rem;
-  }
   #splitter_container .left_card .select_tip .select {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 0.9375rem;
+    justify-content: center;
   }
-  #splitter_container .left_card .select_tip input {
-    height: 5vh;
-    width: 22.5vw;
+  #splitter_container .left_card .select_tip .select input {
+    height: 3rem;
+    width: 9rem !important;
     margin-right: 5px;
     margin-bottom: 11px;
   }
   #splitter_container .left_card .select_tip .custom_clicked {
     width: 36.5vw;
   }
-  #splitter_container .left_card .nb_people #person {
-    top: 62%;
-    left: 12%;
+  #splitter_container .left_card .nb_people {
+    margin-bottom: 2rem;
+  }
+  #splitter_container .left_card .nb_people input {
+    width: 100%;
   }
   #splitter_container .right_card {
-    width: 90%;
+    width: 100%;
+  }
+  #splitter_container .right_card .total {
+    justify-content: space-around;
   }
   #splitter_container .right_card .tip, #splitter_container .right_card .total {
-    margin: 2vh 6vw;
+    justify-content: space-around;
   }
-  #splitter_container .right_card .tip #tip_amount, #splitter_container .right_card .total #tip_amount {
-    margin-left: 25vw;
+  #splitter_container .right_card .reset {
+    text-align: center;
   }
-  #splitter_container .right_card .tip #total_person, #splitter_container .right_card .total #total_person {
-    margin-left: 30vw;
-  }
-  #splitter_container .right_card #reset {
-    height: 6vh;
-    width: 79vw;
-    margin: 1vh 5vw;
+  #splitter_container .right_card .reset #reset {
+    height: 2.5rem;
+    width: 90%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    margin-bottom: 1rem;
   }
   #splitter_container .right_card #completed {
     height: 6vh;
     width: 79vw;
-    margin: 1vh 5vw;
   }
 
   #footer {
